--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,11 @@
             android:layout_marginTop="60dp"
             android:layout_marginLeft="30dp"/>
     </RelativeLayout>
+<ListView
+    android:id="@+id/list"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
+</ListView>
 
 </LinearLayout>
